# snowflake-ai

./: CHANGELOG.md  LICENSE  LICENSE.txt  README.md  build.sh  meta.yaml  pyproject.toml  requirements-poetry.txt  setup.py
notebooks/: snowflake-ai.ipynb
snowflake_ai/apps/: __init__.py  app_page.py  base_app.py  console_app.py  notebook_app.py  streamlit_app.py  tab_registry.py
snowflake_ai/common/: __init__.py  app_config.py  app_connect.py  config_manager.py  data_connect.py  dataframe_factory.py  file_connect.py  oauth_connect.py  snow_connect.py
snowflake_ai/conf/: app_config.toml
snowflake_ai/connect/: __init__.py  authcode_connect.py  clientcreds_connect.py  connect_manager.py  dataframe_factory.py  devicecode_connect.py  file_connect.py  snow_connect.py
snowflake_ai/mlops/: __init__.py  flow_context.py  flow_ops.py  flow_pipeline.py  flow_test.py  model_dev.py  model_serve.py  snow_registry.py
snowflake_ai/snowpandas/: __init__.py  data_prep.py  data_setup.py  setup_manager.py  snow_encoder.py  snow_prep.py  snow_setup.py  snow_transform.py
tests/snowflake_ai/common/: test_app_config.py
tests/snowflake_ai/connect/: test_authcode_connect.py  test_snow_connect.py
tests/snowflake_ai/mlops/: test_flow_context.py
