[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snowflake-ai"
version = "0.1.0"
description = "A Snowflake centic Enterprise AI/ML framework with tight integration of popular data science libraries"
authors = ["Tony Liu <tony.liu@yahoo.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/tonyxliu/snowflake-ai#readme"
keywords = ["AI", "ML", "Snowflake", "Enterprise", "AI/ML"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "~3.8.10"
pandas = "1.5.3"
toml = "~0.10.2"
importlib-resources = "~5.12.0"
snowflake-connector-python = {version = "3.0.3", extras = ["pandas"]}
snowflake-snowpark-python = "~1.3.0"
cryptography = "~40.0.1"
matplotlib = "~3.7.1"
scikit-learn = "1.2.2"
numpy = "1.23.5"
requests = "2.28.1"
pytz = "2022.7"
charset-normalizer = "2.0.4"
altair = "4.1.0"
markupsafe = "2.1.1"
click = "8.0.4"
protobuf = "3.19.6"
streamlit = "~1.18.0"
pyjwt = "2.7.0"
mpld3 = "~0.5.7"