[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snowflake-ai"
version = "0.3.0"
description = "A Snowflake centic Enterprise AI/ML framework with tight integration of popular data science libraries"
authors = ["Illuminairy AI <tony.liu@yahoo.com>"]
license = "Apache Software License 2"
readme = "README.md"
homepage = "https://github.com/illuminairy-ai/snowflake-ai#readme"
keywords = ["Snowflake", "Enterprise", "AI/ML", "AI", "ML", "Machine Learning", "Illuminairy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache Software License", 
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "~3.8.10"
pandas = "1.5.3"
toml = "~0.10.2"
importlib-resources = "~5.12.0"
snowflake-connector-python = {version = "3.0.3", extras = ["pandas"]}
snowflake-snowpark-python = "^1.5.0"
psutil = "5.9.0"
cryptography = "40.0.1"
mpmath = "1.2.1"
urllib3 = "1.26.15"
requests = "2.28.1"
scikit-learn = "1.2.2"
numpy = "1.23.5"
streamlit = "~1.18.0"
pyjwt = "2.7.0"